kubernetes/base/database/postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cognitive-postgres-bank
  namespace: cognitive-bank
spec:
  serviceName: cognitive-postgres-bank
  replicas: 1
  selector:
    matchLabels:
      app: cognitive-postgres-bank
  template:
    metadata:
      labels:
        app: cognitive-postgres-bank
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - $(POSTGRES_USER)
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - $(POSTGRES_USER)
            initialDelaySeconds: 20
            periodSeconds: 20

  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
