kubernetes/base/database/redis-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cognitive-redis-cache
  namespace: cognitive-bank
spec:
  serviceName: cognitive-redis-cache
  replicas: 1
  selector:
    matchLabels:
      app: cognitive-redis-cache
  template:
    metadata:
      labels:
        app: cognitive-redis-cache
    spec:
      containers:
        - name: redis
          image: redis:7-alpine

          command:
            - sh
            - -c
            - |
              redis-server --requirepass "$REDIS_PASSWORD"

          ports:
            - containerPort: 6379

          volumeMounts:
            - name: redis-data
              mountPath: /data

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli -a "$REDIS_PASSWORD" PING
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli -a "$REDIS_PASSWORD" PING
            initialDelaySeconds: 20
            periodSeconds: 20

  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
