kubernetes/base/database/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cognitive-redis-cache
  namespace: cognitive-bank
spec:
  clusterIP: None
  selector:
    app: cognitive-redis-cache
  ports:
    - port: 6379
